# weak-linking-demo

./: .gitignore  CMakeLists.txt  README.md  counter.c  counter.h  defer.h  enumerateBuild.bash  enumerateBuilds.bash  main.c  number.c  number.h  runBuild.bash  targetLinkLibrariesWithDynamicLookup.cmake  testAllBuilds.bash  testBuild.bash
